@@ -72,6 +72,7 @@ class ArgumentDependencyExtracter(Transformer):
     skew = linear
     positive_restricted = linear
     negative_restricted = linear
+    cell_avg = linear
 
     def indexed(self, o, f, i):
         return f
