@@ -98,6 +98,8 @@ class CompactLabeller(ReprLabeller):
         return "[-]"
     def positive_restricted(self, e):
         return "[+]"
+    def cell_avg(self, e): # TODO: Understandable short notation for this?
+        return "_K_"
 
     def inner(self, e):
         return "inner"
